--- a/src/containers/Calculator.css
+++ b/src/containers/Calculator.css
@@ -1,25 +1,4 @@
-.main {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
+.calculator{
+    text-align: center;
+    padding: 20%;
 }
-
-.calculator-screen {
-    width: 100%;
-    font-size: 3rem;
-    height: 80px;
-    border: none;
-    background-color: #252525;
-    color: #fff;
-    text-align: right;
-    
-}
-
-.calculator {
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 400px;
-  }
