--- a/src/components/DisplayScreen/DisplayScreen.css
+++ b/src/components/DisplayScreen/DisplayScreen.css
@@ -3,6 +3,7 @@
     border: 0;
     text-align: right;
     font-size: 3rem;
+    background-color: rgb(216, 216, 216);
 }
 
 .input-expression {
@@ -10,4 +11,13 @@
     border: 0;
     text-align: right;
     font-size: 1rem;
+    background-color: rgb(216, 216, 216);
+}
+
+.dark input{
+    color: white;
+}
+
+.light input {
+    color: black;
 }
