--- a/src/components/NumPad/NumPad.css
+++ b/src/components/NumPad/NumPad.css
@@ -3,3 +3,19 @@
     grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: 1fr;
 }
+
+.dark-mode-numpad input{
+    color : white;
+    background-color: #666;
+}
+
+.light-mode-numpad input{
+    color : black;
+    background-color: #f0f0f0;
+}
+
+.scientific {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: 1fr;
+}
